myblog-yaml/myblog_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog-deployment
  namespace: myblog-yaml
spec:
  replicas: 6
  selector:
    matchLabels:
      app: myblog
  template:
    metadata:
      labels:
        app: myblog
    spec:
      containers:
      - name: myblog
        image: ghcr.io/cloud-native-engineering/myblog:0.0.5
        ports:
        - containerPort: 80
