myblog-yaml/pgsql_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-deployment
  namespace: myblog-yaml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsql
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      containers:
      - name: pgsql
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: pgsql-storage
      volumes:
      - name: pgsql-storage
        persistentVolumeClaim:
          claimName: pgsql-pvc
