myblog-yaml/myblog_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myblog-service
  namespace: myblog-yaml
spec:
  selector:
    app: myblog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
