myblog-yaml/pgsql_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-service
spec:
  selector:
    app: pgsql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
