myblog-yaml/myblog_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myblog-server-ingress
  namespace: myblog-yaml
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myblog.maas.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myblog-service
            port:
              number: 80
  tls:
  - hosts:
    - myblog.maas.local
    secretName: myblog-tls
